@@ -1,5 +1,9 @@
 2001-03-18  Bruno Haible  <haible@clisp.cons.org>
 
+	* clisp-link.in: Pass -B argument to all lisp.run invocations.
+
+2001-03-18  Bruno Haible  <haible@clisp.cons.org>
+
 	* .clisp: New file.
 	* makemake.in: Link .clisp and .gdbinit into the build dir.
 
